--- a/HW6/3/3.css
+++ b/HW6/3/3.css
@@ -3,6 +3,11 @@
   justify-content: space-around;
 }
 
+.product {
+  font-weight: 100;
+  font-size: 14px;
+}
+
 button {
   display: block;
   width: 261px;
@@ -15,6 +20,18 @@ button {
   display: none;
 }
 
-.cart {
+.basket {
   margin-top: 50px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.sum {
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.added {
+  margin: 30px 0;
 }
